# idf_wrapper

./: .gitignore  CMakeLists.txt  README.md  wrapper_driver.cmake
config/: wrapper_config.h
include/: ble42.h  ble_secure.h  jsonrpc.h  mqtt.h  nvs_wrapper.h  ota.h  ota_fw.h  ping.h  tcp_socket.h  topic_helper.h  wifi2.h  wifi_info_store.h  wifi_scan2.h  wifi_wrapper.h
include/link/: ble_wrapper.h  wifi_wrapper.h
include/misc/: firmware_wrapper.h  fs_wrapper.h  json_wrapper.h  ota_wrapper.h
include/peripheral/: adc_wrapper.h  gpio_wrapper.h  i2c_wrapper.h  nvs_wrapper.h  pwm_wrapper.h  spi_wrapper.h  timer_wrapper.h  uart_wrapper.h
include/protocol/: mqtt_wrapper.h  socket_wrapper.h
include/utility/: bufdef.h  os_wrapper.h  shell.h  shell_wrapper.h  time_wrapper.h  type_traits2.h  utility.h  utility_wrapper.h  utils_wrapper.h
link/: ble42.cpp  wifi2.cpp  wifi_info_store.cpp  wifi_scan2.cpp  wifi_wrapper.cpp
misc/: ble_secure.cpp  mqtt_app_cert_download.cpp  ota.cpp  ota_fw.cpp  ping.cpp  topic_helper.cpp  wrapper_config.h
mqtt_wrapper/: mqtt_wrapper.c
protocol/: jsonrpc.cpp  mqtt.cpp  tcp_socket.cpp
src/: nvs_wrapper.cpp
src/ble_gatt_wrapper/: CMakeLists.txt  gatt_client_wrapper.c  gatt_server_wrapper.c  gatts_svc_table_wrapper.c
src/blufi_wrapper/: CMakeLists.txt  blufi_wrapper.c  blufi_wrapper.h
src/http_ota_wrapper/: CMakeLists.txt  http_ota_wrapper.c  http_ota_wrapper.h
src/link/: ble42.cpp  gattc_wrapper.cpp  gatts_table_wrapper.cpp  gatts_wrapper.cpp  wifi_scan2.cpp  wifi_wrapper.cpp
src/misc/: fs_wrapper.cpp  (+3 more)
test/: CMakeLists.txt
(+35 files in other folders)
